--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
+    "select": "^1.1.2",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
